igw.tf
resource "aws_internet_gateway" "eks-igw" {
    vpc_id = aws_vpc.eks-vpc.id

    tags = {
        Name = "${local.env}-eks-igw"
    }
}
